{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 21,
  "lineage": "5d60ae1b-5446-98bc-267b-deea5240e841",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dad573d2ef53e0ae",
            "arn": "arn:aws:ec2:us-east-1:735539228130:elastic-ip/eipalloc-0dad573d2ef53e0ae",
            "association_id": "eipassoc-03febb93e40fbae0d",
            "domain": "vpc",
            "id": "eipalloc-0dad573d2ef53e0ae",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a09e6c546bf2a068",
            "private_dns": "ip-10-0-0-101.ec2.internal",
            "private_ip": "10.0.0.101",
            "public_dns": "ec2-3-220-81-34.compute-1.amazonaws.com",
            "public_ip": "3.220.81.34",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-nat-eip",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-nat-eip",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:735539228130:internet-gateway/igw-03bf9c0e84e044e80",
            "id": "igw-03bf9c0e84e044e80",
            "owner_id": "735539228130",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-igw",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-igw",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c0458fd8103564e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dad573d2ef53e0ae",
            "association_id": "eipassoc-03febb93e40fbae0d",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-08528a027a4537754",
            "network_interface_id": "eni-0a09e6c546bf2a068",
            "private_ip": "10.0.0.101",
            "public_ip": "3.220.81.34",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0be7e26460df88b88",
            "tags": {
              "Name": "dev-nat",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-nat",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c0458fd8103564e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:735539228130:route-table/rtb-01d21d8827ab89684",
            "id": "rtb-01d21d8827ab89684",
            "owner_id": "735539228130",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08528a027a4537754",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-rt",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-private-rt",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0458fd8103564e7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "735539228130",
            "id": "rtb-01d21d8827ab89684",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:735539228130:route-table/rtb-061b095fc7790c9a6",
            "id": "rtb-061b095fc7790c9a6",
            "owner_id": "735539228130",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03bf9c0e84e044e80",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-rt",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-public-rt",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0458fd8103564e7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "735539228130",
            "id": "rtb-061b095fc7790c9a6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06972c0adc9b10a22",
            "region": "us-east-1",
            "route_table_id": "rtb-01d21d8827ab89684",
            "subnet_id": "subnet-0cef106fdb2e5a485"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c45f30a3a4a3824",
            "region": "us-east-1",
            "route_table_id": "rtb-01d21d8827ab89684",
            "subnet_id": "subnet-0d775ec60aaa01a56"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b601ddb563387471",
            "region": "us-east-1",
            "route_table_id": "rtb-01d21d8827ab89684",
            "subnet_id": "subnet-04327908608e52131"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0727758dbe2700746",
            "region": "us-east-1",
            "route_table_id": "rtb-061b095fc7790c9a6",
            "subnet_id": "subnet-0be7e26460df88b88"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9da9147fc9c8a40",
            "region": "us-east-1",
            "route_table_id": "rtb-061b095fc7790c9a6",
            "subnet_id": "subnet-03fa782f5233b7c6d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01858eff469df7dde",
            "region": "us-east-1",
            "route_table_id": "rtb-061b095fc7790c9a6",
            "subnet_id": "subnet-0de34708978d252db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:735539228130:subnet/subnet-0cef106fdb2e5a485",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cef106fdb2e5a485",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "735539228130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c0458fd8103564e7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "735539228130",
            "id": "subnet-0cef106fdb2e5a485",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:735539228130:subnet/subnet-0d775ec60aaa01a56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d775ec60aaa01a56",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "735539228130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c0458fd8103564e7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "735539228130",
            "id": "subnet-0d775ec60aaa01a56",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:735539228130:subnet/subnet-04327908608e52131",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04327908608e52131",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "735539228130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-private-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-private-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c0458fd8103564e7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "735539228130",
            "id": "subnet-04327908608e52131",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:735539228130:subnet/subnet-0be7e26460df88b88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be7e26460df88b88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "735539228130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-public-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c0458fd8103564e7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "735539228130",
            "id": "subnet-0be7e26460df88b88",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:735539228130:subnet/subnet-03fa782f5233b7c6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03fa782f5233b7c6d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "735539228130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-public-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-public-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c0458fd8103564e7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "735539228130",
            "id": "subnet-03fa782f5233b7c6d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:735539228130:subnet/subnet-0de34708978d252db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de34708978d252db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "735539228130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-public-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-public-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c0458fd8103564e7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "735539228130",
            "id": "subnet-0de34708978d252db",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:735539228130:vpc/vpc-0c0458fd8103564e7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0103ab8ef149b81bd",
            "default_route_table_id": "rtb-04cf8baece7562f6b",
            "default_security_group_id": "sg-0c2457d6aea2dbc0c",
            "dhcp_options_id": "dopt-04d5ccf0c4c1bb88b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c0458fd8103564e7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04cf8baece7562f6b",
            "owner_id": "735539228130",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-vpc",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "735539228130",
            "id": "vpc-0c0458fd8103564e7",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}